@@ -35,6 +35,7 @@ Version 1.7.0-svn:
      are not incapacitated (for example, it now ignores stoned units )
    * Implemented FR #13348: added timeofday_modifier function to formula AI
    * Added attacks_left attribute to unit callable
+   * New variable: my_attacks with all possible attacks 
  * Graphics:
    * New type of animation : "recruiting" used by leaders when recruiting
      units
